# IjipMatjip

./: .gitignore  README.md
3차 프로젝트/: Team_2_스프린트_정은비_250708.md  Team_2_스프린트_정은비_250714.md  Team_2_스프린트_정은비_250715.md
danbi/: README.md
eunbi/: .gitignore  DEPLOYMENT_GUIDE.md
eunbi/image-realistic/backend/: Dockerfile  README.md  error_handlers.py  layout_processor.py  main.py  main.py.bak  main2.py.bak  main_backup.py  prompt_builder.py  prompt_templates.py  prompt_templates_backup.py  pyproject.toml  replicate_utils.py  replicate_utils_old.py  requirements.txt  test_composite.py  test_request.json  utils.py  vertex_ai.py
eunbi/room-measure/backend-cloud/: Dockerfile  README.md  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  room_layouts.json
eunbi/room-measure/backend-cloud/config/: settings.py
eunbi/room-measure/backend-cloud/src/: __init__.py
eunbi/room-measure/backend-cloud/src/auth/: service.py
eunbi/room-measure/backend-cloud/src/database/: connections.py
eunbi/room-measure/backend-cloud/src/models/: schemas.py
eunbi/room-measure/backend-cloud/src/routes/: auth.py  images.py  layouts.py  proxy.py
frontend-main/: .env.example  .gitignore  ANALYSIS_REPORT.md  Dockerfile  LOADING_IMPROVEMENTS.md  MOCK_DATA_SYSTEM.md  README.md  XSS_SECURITY_FIXES.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
minah/: .gitignore  README.md  main.py
void/: AI_기반_공간분석_및_실사화_시스템_설계서.md  README.md  (+8 more)
void/backend-local/: README_LOCAL.md  ai_room_detection.py  main.py  pyproject.toml  requirements.txt  room_measurement.py  window_detection.py
(+314 files in other folders)
