[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pymongo==4.10.1",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.1",
    "timm>=1.0.19",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "ultralytics>=8.3.168",
    "uvicorn>=0.35.0",
    "yarg==0.1.9",
]
