[project]
name = "realistic-room-triple"
version = "0.1.0"
description = "i2i realistic interior with Stability/Replicate/Vertex"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.30.1",
    "httpx==0.27.0",
    "python-dotenv==1.0.1",
    "pydantic==2.7.4",
    "google-auth==2.23.4",
    "google-auth-oauthlib==1.0.0",
    "google-auth-httplib2==0.1.1",
    "pillow>=11.3.0",
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "requests>=2.32.4",
]
